apps/nix-remote-builder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${nix_remote_builder_service_name}
  namespace: ${nix_remote_builder_namespace}
  labels:
    app.kubernetes.io/name: nix-remote-builder
spec:
  type: ${nix_remote_builder_service_type:=NodePort}
  externalTrafficPolicy: ${nix_remote_builder_external_traffic_policy:=Local}
  selector:
    app.kubernetes.io/name: nix-remote-builder
  ports:
    - name: ssh
      port: ${nix_remote_builder_ssh_port}
      targetPort: ssh
      nodePort: ${nix_remote_builder_node_port:=30610}
      protocol: TCP
