apps/nix-remote-builder/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${nix_remote_builder_service_name}-ssh
  namespace: ${nix_remote_builder_namespace}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nix-remote-builder
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: ${nix_remote_builder_allowed_cidr_1:=10.1.0.0/16}
        - ipBlock:
            cidr: ${nix_remote_builder_allowed_cidr_2:=10.42.0.0/16}
        - ipBlock:
            cidr: ${nix_remote_builder_allowed_cidr_3:=10.43.0.0/16}
      ports:
        - protocol: TCP
          port: ${nix_remote_builder_ssh_port}
